[Feature] 배포 정보 및 상태 모달 추가
