# src/libs/core-api/api/model/deployment-status.ts
@@ -19,10 +19,10 @@
  */
 
 export const DeploymentStatus = {
-  NUMBER_0: 0,
-  NUMBER_1: 1,
-  NUMBER_2: 2,
-  NUMBER_3: 3,
+  Created: 'Created',
+  Deploying: 'Deploying',
+  Deployed: 'Deployed',
+  Failed: 'Failed',
 } as const;
 
 export type DeploymentStatus =
